--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.11"
 django = "^5.0"
 djangorestframework = "^3.14.0"
+gunicorn = "^21.2.0"
+whitenoise = "^6.6.0"
 
 
 [build-system]
