--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.0"
 djangorestframework = "^3.14.0"
 gunicorn = "^21.2.0"
 whitenoise = "^6.6.0"
+djangorestframework-simplejwt = "^5.3.1"
 
 
 [build-system]
