--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ djangorestframework = "^3.14.0"
 gunicorn = "^21.2.0"
 whitenoise = "^6.6.0"
 djangorestframework-simplejwt = "^5.3.1"
+drf-spectacular = "^0.27.0"
 
 
 [build-system]
