--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,14 @@ authors = ["Fernando Bonde Leonelli <fernandobondeleonelli@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.12"
 django = "^5.0"
-djangorestframework = "^3.14.0"
 gunicorn = "^21.2.0"
 whitenoise = "^6.6.0"
+djangorestframework = "^3.14.0"
 djangorestframework-simplejwt = "^5.3.1"
 drf-spectacular = "^0.27.0"
-
+django-cors-headers = "^4.3.1"
 
 [build-system]
 requires = ["poetry-core"]
