--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ djangorestframework = "^3.14.0"
 djangorestframework-simplejwt = "^5.3.1"
 drf-spectacular = "^0.27.0"
 django-cors-headers = "^4.3.1"
+psycopg2 = "^2.9.9"
+psycopg2-binary = "^2.9.9"
 
 [build-system]
 requires = ["poetry-core"]
